--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
   font-weight: bold;
 }
 
-div, {
+div {
   border: 1px solid red;
 }
 
@@ -135,18 +135,17 @@ div, {
 
 .two-columns__paragraph {
   margin: 0;
-  padding: 15px 0;
   font-size: 24px;
   line-height: 34px;
   font-weight: normal;
 }
 
-.two-columns__paragraph:first-of-type {
-  padding: 0 0 15px;
+.two-columns__paragraph:nth-child(even) {
+  margin: 30px 0;
 }
 
 .two-columns__paragraph:last-of-type {
-  padding: 15px 0 0;
+  margin-bottom: 0;
 }
 
 .span-accent {
@@ -217,6 +216,35 @@ div, {
   font-size: 18px;
   font-weight: normal;
   text-align: center;
+}
+
+.video {
+  margin: 0;
+  padding-top: 100px;
+}
+
+.video__iframes {
+ display: flex;
+ margin: 0 auto;
+ justify-content: center;
+}
+
+.video__iframe {
+  width: 515px;
+  height: 316px;
+  position: relative;
+  top: 50px;
+}
+
+.video__iframe:first-of-type {
+  margin-right: 20px;
+}
+
+.oakley {
+  padding-top: 160px;
+  justify-content: center;
+  background-color: #f2f2f2;
+  display: flex;
 }
 
 .digits {
