--- a/styles/style.css
+++ b/styles/style.css
@@ -19,10 +19,23 @@
   font-weight: bold;
 }
 
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotation {
+  animation: rotate 20s linear infinite;
+}
+
+
 div {
   border: 1px solid red;
 }
-
 
 .page {
   min-width: 1100px;
@@ -35,6 +48,10 @@ div {
   font-family: 'Inter', Arial, sans-serif;
 }
 
+.content {
+
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -45,6 +62,7 @@ div {
   max-height: 756px;
   /* выше установили ограничения для секции */
   background-color: #f2f2f2;
+  overflow: hidden;
 }
 
 .logo {
@@ -153,9 +171,9 @@ div {
 }
 
 .techniques {
-  margin: 0 auto;
   padding-top: 100px;
   width: 80%;
+  margin: auto;
 }
 
 .section-title {
@@ -196,9 +214,10 @@ div {
  }
 
 .cards__image {
+  border-radius: 85px;
   width: 160px;
   height: 160px;
-  padding: 60px 40px 43px;
+  margin: 60px 40px 43px;
 }
 
 .cards__title {
@@ -234,6 +253,7 @@ div {
   height: 316px;
   position: relative;
   top: 50px;
+  overflow: hidden;
 }
 
 .video__iframe:first-of-type {
@@ -245,6 +265,44 @@ div {
   justify-content: center;
   background-color: #f2f2f2;
   display: flex;
+}
+
+.feynman {
+  position: relative;
+  height: 890px;
+  box-sizing: border-box;
+  padding-top: 100px;
+  background-image: url(../images/feynman.png);
+  background-size: 867px 637px;
+  background-position: left bottom;
+  background-repeat: no-repeat;
+}
+
+.feynman__title {
+  width: 648px;
+  margin: 0 auto 70px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 700;
+}
+
+.feynman__subtitle {
+  margin: 0 auto;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+  position: absolute;
+  top: 50%;
+  right: 48px;
 }
 
 .digits {
@@ -281,18 +339,99 @@ div {
   font-weight: normal;
 }
 
+.khan {
+    background-color: #f2f2f2;
+}
+
+.khan__container {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    padding-top: 100px;
+    justify-content: flex-start;
+}
+
+.khan__author {
+  margin: 0;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+}
+
+.khan__title {
+  margin: 0 0 50px;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 700;
+}
+
+.khan__quote {
+  margin: 0 0 36px;  
+  max-width: 790px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.khan__quote-author {
+  margin: 0 0 10px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.khan__quote-author-subline {
+  margin: 0 0 68px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.khan__book-container {
+  display: flex;
+}
+
+.khan__bok-pic {
+  width: 620px;
+  height: 608px;
+  margin-right: 48px;
+  object-fit: cover;
+  object-position: top;
+}
+
+.khan__buy-link {
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  color: #2f80ed;
+  text-decoration: none;
+}
+
 .kaufman {
   background-color: #1f1f1f;
   margin: 0;
   padding: 90px 0;
+  position: relative;
+  overflow: hidden;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
 }
 
 .section-title_theme_dark {
   color: white;
+  position: relative;
 }
 
 .section-subtitle_theme_dark {
   color: white;
+  position: relative;
 }
 
 .table_theme_dark {
@@ -304,6 +443,7 @@ div {
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  position: relative;
 }
 
 .table__heading_theme_dark {
